--- a/src/Modules/Hospital/components/CSS/login.css
+++ b/src/Modules/Hospital/components/CSS/login.css
@@ -73,3 +73,12 @@ button{
     padding: .7rem 2rem;
     border-radius: 2rem;
 }
+table,td,th{
+    border: 1px solid rgb(87, 87, 87);
+    border-collapse: collapse;
+    padding: .5rem;
+    text-align: center;
+}
+table{
+    margin: 5% auto;
+}
