--- a/src/Modules/Hospital/components/CSS/login.css
+++ b/src/Modules/Hospital/components/CSS/login.css
@@ -82,3 +82,13 @@ table,td,th{
 table{
     margin: 5% auto;
 }
+.popup-container{
+    width:40%;
+    height:50%;
+    box-shadow: 0px 0px 1px black;
+    text-align: center;
+    position:fixed;
+    top:40vh;
+    background-color: white;
+    left: 30%;
+}
